File service add and fixes