@@ -11,6 +11,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
@@ -18,6 +19,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.test.web.servlet.MockMvc;
 import org.sunrider.market.exception.BadRequestException;
 import org.sunrider.market.exception.NotFoundException;
@@ -49,6 +51,7 @@ class OrderControllerTest {
     private OrderDto orderDto;
     private UUID orderId;
     private UUID userId;
+    private int page = 0, size = 10;
 
     @BeforeEach
     void setUp() {
@@ -96,17 +99,17 @@ class OrderControllerTest {
 
     @Test
     void getOrders_success() throws Exception {
-        when(orderService.getOrder(userId)).thenReturn(List.of(orderDto));
+        when(orderService.getOrder(userId, page, size)).thenReturn(new PageImpl<>(Collections.singletonList(orderDto)));
 
         mockMvc.perform(get("/api/v1/orders")
                 .with(user(testUser)))
             .andExpect(status().isOk())
-            .andExpect(jsonPath("$[0].status").value("CREATED"));
+            .andExpect(jsonPath("$.content[0].status").value("CREATED"));
     }
 
     @Test
     void getOrders_notFound() throws Exception {
-        when(orderService.getOrder(userId))
+        when(orderService.getOrder(userId, page, size))
             .thenThrow(new NotFoundException("У пользователя нет заказов."));
 
         mockMvc.perform(get("/api/v1/orders")
